# flowen-desktop-sync

./: .gitignore  FLOWEN_API_RESEARCH.md  IMPLEMENTATION_GUIDE.md  README.md  SESSION_2_SUMMARY.md  SESSION_SUMMARY.md  package-lock.json  package.json
src/: App.css  App.tsx  crypto.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
