[package]
name = "flowen-desktop-sync"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "flowen_desktop_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2.4.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File watcher
notify = "6.1"

# HTTP client (with cookies, multipart, and TLS)
reqwest = { version = "0.11.27", features = ["json", "multipart", "cookies", "blocking", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Encoding & cryptography
base64 = "0.21.7"

# File system helpers
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
